--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ aside.preview .scroll-box{
 
 /*academia style settings*/
 div.school-logo{
-    width: 20%;
+    width: 25%;
     float: left;
 }
 
@@ -166,13 +166,21 @@ div.school-logo img{
     max-width:100px;
 }
 div.school-info{
-    width: 80%;
-    float: right;
+    width: 70%;
+    float: left;
     text-align: left;
 }
+
+@media (max-width: 800px){
+  div.school-info{
+    width:100%;
+  }
+}
+
 div.school-info table{
     border: 1px black solid;
     background-color:white;
+    width: 100%;
 }
 
 th{
